--- a/PersonalWeb/stylesProjects.css
+++ b/PersonalWeb/stylesProjects.css
@@ -58,7 +58,7 @@ body {
 
 .navbar {
     width: 100%;
-    height: 80px;
+    height: 9vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
